src/objects/ACCL__Fund_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Amount__c</fullName>
        <description>Transaction Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Transaction Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Source_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source fund for the transaction</description>
        <label>Source Fund</label>
        <referenceTo>ACCL__Fund__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Target_Fund__c</fullName>
        <description>Target fund for the transaction</description>
        <label>Target Fund</label>
        <referenceTo>ACCL__Fund__c</referenceTo>
        <relationshipName>Transactions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Transaction_Template_Description__c</fullName>
        <formula>ACCL__Fund_Transaction_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Transaction Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Transaction_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to transaction template</description>
        <label>Fund Transaction Template</label>
        <referenceTo>ACCL__Fund_Transaction_Template__c</referenceTo>
        <relationshipLabel>Fund Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Transaction_Type__c</fullName>
        <formula>Text(ACCL__Fund_Transaction_Template__r.ACCL__Transaction_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Approver__c</fullName>
        <description>contains the first name of the approver</description>
        <label>Approver</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Cross_Category_Transaction__c</fullName>
        <description>Identifies of the Transaction is a Cross Category Transaction or not</description>
        <formula>ACCL__Fund_Transaction_Template__r.UL_Cross_Category_Transfer_Allowed__c</formula>
        <label>Cross Category Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UL_Status__c</fullName>
        <description>Status Field for Cross Category Transaction</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent/Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Transaction_Description__c</fullName>
        <description>Description field for the transaction performed</description>
        <label>Transaction Description</label>
        <type>TextArea</type>
    </fields>
    <label>Fund Transaction</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Fund_Transaction_Template_Description__c</columns>
        <columns>ACCL__Transaction_Type__c</columns>
        <columns>ACCL__Date__c</columns>
        <columns>ACCL__Source_Fund__c</columns>
        <columns>ACCL__Target_Fund__c</columns>
        <columns>ACCL__Amount__c</columns>
        <columns>UL_Status__c</columns>
        <columns>ACCL__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Fund Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Amount__c &lt;=0</errorConditionFormula>
        <errorMessage>Transaction Amount should be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch_Source_Target</fullName>
        <active>true</active>
        <errorConditionFormula>AND
          (
             ACCL__Transaction_Type__c = &quot;Transfer&quot;,
             ACCL__Source_Fund__r.ACCL__Sales_Org__c &lt;&gt; ACCL__Target_Fund__r.ACCL__Sales_Org__c
          )</errorConditionFormula>
        <errorMessage>Sales Org of Source Fund and Target Fund must be same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch_Template_Source</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
          (
            ACCL__Transaction_Type__c = &quot;Transfer&quot;,
            ACCL__Source_Fund__r.ACCL__Sales_Org__c &lt;&gt; TEXT(ACCL__Fund_Transaction_Template__r.ACCL__Sales_Org__c ) 
          )</errorConditionFormula>
        <errorMessage>Sales Org of Transaction Template and Source Fund should be same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch_Template_Target</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Target_Fund__r.ACCL__Sales_Org__c &lt;&gt; TEXT(ACCL__Fund_Transaction_Template__r.ACCL__Sales_Org__c )</errorConditionFormula>
        <errorMessage>Sales Org of Transaction Template and Target Fund should be same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Fund_Validation</fullName>
        <active>true</active>
        <description>validation  to restrict money transfer to and from closed fund</description>
        <errorConditionFormula>(ISPICKVAL( ACCL__Target_Fund__r.ACCL__Status__c , &quot;Closed&quot;)) ||  ISPICKVAL( ACCL__Source_Fund__r.ACCL__Status__c , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Cannot transfer money to or from closed fund</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_Adjustment_transaction_validation</fullName>
        <active>true</active>
        <description>Validation to check if the transaction amount is more than the available amount in the target fund</description>
        <errorConditionFormula>AND( ISPICKVAL( ACCL__Fund_Transaction_Template__r.ACCL__Transaction_Type__c , &quot;Adjustment&quot;) , ACCL__Amount__c &gt;  ACCL__Target_Fund__r.UL_Available_to_Spend__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Amount__c</errorDisplayField>
        <errorMessage>Adjustment amount is more than the available to spend amount in the target fund</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_Transfer_transaction_validation</fullName>
        <active>true</active>
        <description>Validation to check if the transaction amount is more than the available amount in the source fund</description>
        <errorConditionFormula>AND( ISPICKVAL( ACCL__Fund_Transaction_Template__r.ACCL__Transaction_Type__c , &quot;Transfer&quot;)  ,  ACCL__Amount__c &gt;  ACCL__Source_Fund__r.UL_Available_to_Spend__c  )</errorConditionFormula>
        <errorDisplayField>ACCL__Amount__c</errorDisplayField>
        <errorMessage>Transfer amount is more than the available to spend amount in the source fund</errorMessage>
    </validationRules>
</CustomObject>